--- a/src/main/resources/templates/cm/cmIndex.html
+++ b/src/main/resources/templates/cm/cmIndex.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href="../css/hello.css">
-<link rel="stylesheet" href="../lib/bootstrap-4.1.3-dist/css/bootstrap.min.css">
-<title>Insert title here</title>
+
+<title>PROBE 시제품</title>
 </head>
 
 <body>
@@ -13,8 +12,11 @@
 <div name="div200" id="div200"></div>
 </body>
 
-<script src="../lib/jquery/jquery.min.js"></script>
-<script src="../lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
-<script src="../js/cm/cmIndex.js"></script>
+<script src="../comn/jquery-3.3.1.js"></script>
+<script src="../comn/popper.min.js"></script>
+<script src="../comn/bootstrap.min.js"></script>
+<link  href="../comn/bootstrap.min.css" rel="stylesheet">
 
+<script src="../js/cm/cmIndex.js"></script>
+<script src="../js/util/globalUtil.js"></script>
 </html>
