--- a/src/main/resources/templates/cm/cmNav.html
+++ b/src/main/resources/templates/cm/cmNav.html
@@ -1,28 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
+
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href="../css/hello.css">
-<link rel="stylesheet" href="../lib/bootstrap-4.1.3-dist/css/bootstrap.min.css">
-<title>Insert title here</title>
-
-</head>
-
-<body>
-<nav> 
-<ul>
-<li><a href="#" id="cmHome">홈</a></li>
-<li><a href="#" id="dlStep1">집구하기</a></li>
-<li><a href="#" id="dlStep1">집내놓기</a></li>
-<li><a href="#">Community</a></li>
-<li><a href="#">Locations</a></li>
-<li><a href="#" id="ptIncome">공인중개사 무료 등록</a></li>
-</ul>
-</nav>
-
-<script src="../lib/jquery/jquery.min.js"></script>
-<script src="../lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
-<script src="../js/util/globalUtil.js"></script>
 <script src="../js/cm/cmNav.js"></script>
-</html>
+  
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">Probe</a>
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+		<li class="nav-item"><a class="nav-link active" href="#" id="cmHome">홈</a></li>
+		<li class="nav-item"><a class="nav-link" href="#" id="dlStep1">집구하기</a></li>
+		<li class="nav-item"><a class="nav-link" href="#" id="dlStep1">집내놓기</a></li>
+		<li class="nav-item"><a class="nav-link" href="#">Community</a></li>
+		<li class="nav-item"><a class="nav-link" href="#">Locations</a></li>
+		<li class="nav-item"><a class="nav-link" href="#" id="ptIncome">공인중개사 무료 등록</a></li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+	</nav>
