--- a/src/main/resources/templates/cm/cmWelcome.html
+++ b/src/main/resources/templates/cm/cmWelcome.html
@@ -1,19 +1,66 @@
-<!DOCTYPE html>
-<html>
-<head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href="../css/hello.css">
-<link rel="stylesheet" href="../lib/bootstrap-4.1.3-dist/css/bootstrap.min.css">
-<title>Insert title here</title>
-</head>
 
-<body>
-환영
+<div class="jumbotron">
+  <h1 class="display-4">Hello, There!</h1>
+  <p class="lead">할인이 서비스다.</p>
+  <hr class="my-4">
+  <p>허위 매물 없다.</p>
+  <p>매물도 없다.</p>
+  <p>중개수수료 할인해주는 공인중개사만 있다.</p>
+  <a class="btn btn-primary btn-lg" href="#" role="button" id="cmCusGet" name="cmCusGet">집 구하기</a>
+  <a class="btn btn-primary btn-lg" href="#" role="button" id="cmCusSet" name="cmCusSet">집 내놓기</a>
+</div>
 
-</body>
+<button class="btn btn-default" data-target="#layerpop" data-toggle="modal">모달출력버튼</button><br/>
+<div class="modal fade" id="layerpop" >
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <!-- header -->
+      <div class="modal-header">
+        <!-- header title -->
+        <h4 class="modal-title">지역선택</h4>
+        <!-- 닫기(x) 버튼 -->
+        <button type="button" class="close" data-dismiss="modal">×</button>
+      </div>
+      <!-- body -->
+      <div class="modal-body">
+            Body<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      </div>
+      <!-- Footer -->
+      <div class="modal-footer">
+        Footer
+        <button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
+      </div>
+    </div>
+  </div>
+</div>
 
-<script src="../lib/jquery/jquery.min.js"></script>
-<script src="../lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+
+<div class="alert alert-primary" role="alert">
+  신문기사 primary alert
+</div>
+<div class="alert alert-secondary" role="alert">
+  신문기사 secondary alert
+</div>
+<div class="alert alert-success" role="alert">
+  신문기사 success alert
+</div>
+<div class="alert alert-danger" role="alert">
+  신문기사 danger alert
+</div>
+<div class="alert alert-warning" role="alert">
+  신문기사 warning alert
+</div>
+<div class="alert alert-info" role="alert">
+  신문기사 info alert
+</div>
+<div class="alert alert-light" role="alert">
+  신문기사 light alert
+</div>
+<div class="alert alert-dark" role="alert">
+  신문기사 dark alert
+</div>
+
+
+
 <script src="../js/cm/cmWelcome.js"></script>
-</html>
