내비바정상화

--- a/src/main/resources/templates/cm/cmLocInputer.html
+++ b/src/main/resources/templates/cm/cmLocInputer.html
@@ -2,25 +2,10 @@
 <meta charset="UTF-8">
 <script src="../js/cm/cmLocInputer.js"></script>
 
-<div class="modal" id="layCmLocInputer" >
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <!-- header -->
-      <div class="modal-header">
-        <!-- header title -->
-        <h4 class="modal-title">지역선택</h4>
-        <!-- 닫기(x) 버튼 -->
-        <button type="button" class="close" data-dismiss="modal">×</button>
-      </div>
-      <!-- body -->
-      <div class="modal-body">
-            Body<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-      </div>
-      <!-- Footer -->
-      <div class="modal-footer">
-        Footer
-        <button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
-      </div>
-    </div>
+<div class="container">
+  <div class="row">
+    <div class="col-4 border">One of three columns</div>
+    <div class="col-4 border">One of three columns</div>
+    <div class="col-4 border">One of three columns</div>
   </div>
 </div>
