--- a/src/main/resources/templates/cm/cmIndex.html
+++ b/src/main/resources/templates/cm/cmIndex.html
@@ -10,6 +10,33 @@
 <body>
 <div name="div100" id="div100"></div>
 <div name="div200" id="div200"></div>
+
+<button class="btn btn-default sr-only" data-target="#layLocInputer" data-toggle="modal" id="btnLocInputer" name="btnLocInputer">모달출력버튼</button><br/>
+<div class="modal fade" id="layLocInputer" >
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <!-- header -->
+      <div class="modal-header">
+        <!-- header title -->
+        <h4 class="modal-title">지역선택</h4>
+        <!-- 닫기(x) 버튼 -->
+        <button type="button" class="close" data-dismiss="modal">×</button>
+      </div>
+      <!-- body -->
+      <div class="modal-body" id="divLocMain">
+            Bo2d1y<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      </div>
+      <!-- Footer -->
+      <div class="modal-footer">
+        Footer
+        <button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 </body>
 
 <script src="../comn/jquery-3.3.1.js"></script>
