--- a/src/main/resources/templates/partner/partnerStepOne.html
+++ b/src/main/resources/templates/partner/partnerStepOne.html
@@ -7,15 +7,16 @@
 <link rel="stylesheet" href="/css/partner/partnerMain.css">
 <title>Insert title here</title>
 </head>
+
 <body>
 	<div class="header">
-		공인중개사 무료등록
+		<div id="stepOne"></div>
 	</div>
 	<div class="content">
-		<button id="apply" type="button" class="btn btn-success">신청하기</button>
+		
 	</div>
-	<div class="description">
-		추가설명
+	<div class="footer">
+		<button id="register" type="button" class="btn btn-success">등록하기</button>
 	</div>
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
