--- a/src/main/resources/static/css/partner/partnerStepOne.css
+++ b/src/main/resources/static/css/partner/partnerStepOne.css
@@ -10,8 +10,15 @@
 	height: 200px;
 }
 
-.description {
+.footer {
 	position: relative;
 	width: 100%;
 	height: 200px;
+}
+
+#stepOne {
+	height: 50px;
+	width: 50px;
+	border: 1px solid #ccc;
+	border-radius: 15px;
 }
