--- a/src/main/resources/templates/partner/partnerStepOne.html
+++ b/src/main/resources/templates/partner/partnerStepOne.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="/lib/bootstrap-4.1.3-dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/css/partner/partnerMain.css">
+<link rel="stylesheet" href="/css/partner/partnerStepOne.css">
 <title>Insert title here</title>
 </head>
 
@@ -13,7 +13,7 @@
 		<div id="stepOne"></div>
 	</div>
 	<div class="content">
-		
+		<input id="name" type="text" th:value='${name}'>
 	</div>
 	<div class="footer">
 		<button id="register" type="button" class="btn btn-success">등록하기</button>
@@ -21,6 +21,6 @@
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
-<script src="/js/partner/partnerMain.js"></script>
+<script src="/js/partner/partnerStepOne.js"></script>
 
 </html>
