--- a/src/main/resources/templates/cm/cmIndex.html
+++ b/src/main/resources/templates/cm/cmIndex.html
@@ -26,6 +26,21 @@
       <div class="modal-body" id="divLocMain">
             Bo2d1y<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       </div>
+      
+<input type="hidden" >
+<input type="text" class="form-control sr-only" id="validationTooltip01" placeholder="First name" value="Ma1rk">
+
+<input type="text" class="form-control" id="txtDepth1Code" value="" placeholder="txtDepth1Cd">
+<input type="text" class="form-control" id="txtDepth2Code" value="" placeholder="txtDepth2Cd">
+<input type="text" class="form-control" id="txtDepth3Code" value="" placeholder="txtDepth3Cd">
+<input type="text" class="form-control" id="txtDepth1Code" value="" placeholder="txtDepth1Cdnm">
+<input type="text" class="form-control" id="txtDepth2Code" value="" placeholder="txtDepth2Cdnm">
+<input type="text" class="form-control" id="txtDepth3Code" value="" placeholder="txtDepth3Cdnm">
+
+<input type="text" class="form-control" id="txtParamGrCode" value="" placeholder="txtParamGrCode">
+<input type="text" class="form-control" id="txtParamDepth" value="" placeholder="txtParamDepth">
+<input type="text" class="form-control" id="txtParamCode" value="" placeholder="txtParamCode">
+      
       <!-- Footer -->
       <div class="modal-footer">
         Footer
