지역선택기 시안

--- a/src/main/resources/templates/cm/cmIndex.html
+++ b/src/main/resources/templates/cm/cmIndex.html
@@ -22,6 +22,7 @@
         <!-- 닫기(x) 버튼 -->
         <button type="button" class="close" data-dismiss="modal">×</button>
       </div>
+      
       <!-- body -->
       <div class="modal-body" id="divLocMain">
             Bo2d1y<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -30,12 +31,12 @@
 <input type="hidden" >
 <input type="text" class="form-control sr-only" id="validationTooltip01" placeholder="First name" value="Ma1rk">
 
-<input type="text" class="form-control" id="txtDepth1Code" value="" placeholder="txtDepth1Cd">
-<input type="text" class="form-control" id="txtDepth2Code" value="" placeholder="txtDepth2Cd">
-<input type="text" class="form-control" id="txtDepth3Code" value="" placeholder="txtDepth3Cd">
-<input type="text" class="form-control" id="txtDepth1Code" value="" placeholder="txtDepth1Cdnm">
-<input type="text" class="form-control" id="txtDepth2Code" value="" placeholder="txtDepth2Cdnm">
-<input type="text" class="form-control" id="txtDepth3Code" value="" placeholder="txtDepth3Cdnm">
+<input type="text" class="form-control" id="txtDepth1Code" name="txtDepth1Code"></input>
+<input type="text" class="form-control" id="txtDepth2Code" name="txtDepth2Code"></input>
+<input type="text" class="form-control" id="txtDepth3Code" name="txtDepth3Code"></input>
+<input type="text" class="form-control" id="txtDepth1Cdnm" name="txtDepth1Cdnm"></input>
+<input type="text" class="form-control" id="txtDepth2Cdnm" name="txtDepth2Cdnm"></input>
+<input type="text" class="form-control" id="txtDepth3Cdnm" name="txtDepth3Cdnm"></input>
 
 <input type="text" class="form-control" id="txtParamGrCode" value="" placeholder="txtParamGrCode">
 <input type="text" class="form-control" id="txtParamDepth" value="" placeholder="txtParamDepth">
