--- a/src/main/resources/templates/cm/cmLocInputer.html
+++ b/src/main/resources/templates/cm/cmLocInputer.html
@@ -2,9 +2,13 @@
 <meta charset="UTF-8">
 <script src="../js/cm/cmLocInputer.js"></script>
 
+<nav aria-label="breadcrumb">
+	<ol class="breadcrumb" id="navSelLoc" name="navSelLoc">
+	</ol>
+</nav>
 
 <div class="container">
-  <div class="row">
+  <div class="row" id="divSelButtons" name="divSelButtons">
     <div class="col-4 border">One of three columns</div>
     <div class="col-4 border">One of three columns</div>
     <div class="col-4 border">One of three columns</div>
