구하기질문시리즈

--- a/src/main/resources/templates/cm/cmNav.html
+++ b/src/main/resources/templates/cm/cmNav.html
@@ -10,8 +10,8 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 		<li class="nav-item"><a class="nav-link active" href="#" id="cmHome">홈</a></li>
-		<li class="nav-item"><a class="nav-link" href="#" id="dlStep1">집구하기</a></li>
-		<li class="nav-item"><a class="nav-link" href="#" id="dlStep1">집내놓기</a></li>
+		<li class="nav-item"><a class="nav-link" href="#" id="dlMain_9">집구하기</a></li>
+		<li class="nav-item"><a class="nav-link" href="#" id="dlMain_8">집내놓기</a></li>
 		<li class="nav-item"><a class="nav-link" href="#">Community</a></li>
 		<li class="nav-item"><a class="nav-link" href="#">Locations</a></li>
 		<li class="nav-item"><a class="nav-link" href="#" id="ptIncome">공인중개사 무료 등록</a></li>
