--- a/src/main/resources/templates/cm/cmIndex.html
+++ b/src/main/resources/templates/cm/cmIndex.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,7 +25,7 @@
       
       <!-- body -->
       <div class="modal-body" id="divLocMain">
-            Bo2d1y<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            Loading...
       </div>
       
 <input type="hidden" >
