딜 4단계까지.

--- a/src/main/resources/templates/cm/cmIndex.html
+++ b/src/main/resources/templates/cm/cmIndex.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
+<button class="btn btn-default sr-only" data-target="#layLocInputer" data-toggle="modal" id="btnLocInputer" name="btnLocInputer"></button>
 <div name="div100" id="div100"></div>
 <div name="div200" id="div200"></div>
 
-<button class="btn btn-default sr-only" data-target="#layLocInputer" data-toggle="modal" id="btnLocInputer" name="btnLocInputer">모달출력버튼</button><br/>
 <div class="modal fade" id="layLocInputer" >
   <div class="modal-dialog">
     <div class="modal-content">
