--- a/src/main/resources/templates/cm/cmLocInputer.html
+++ b/src/main/resources/templates/cm/cmLocInputer.html
@@ -9,8 +9,7 @@
 
 <div class="container">
   <div class="row" id="divSelButtons" name="divSelButtons">
-    <div class="col-4 border">One of three columns</div>
-    <div class="col-4 border">One of three columns</div>
-    <div class="col-4 border">One of three columns</div>
+Loading...
   </div>
 </div>
+<button type="button" class="btn btn-success btn-block" id="btnOkNext" >OK Next</button>
