--- a/src/main/resources/static/css/partner/partnerStepOne.css
+++ b/src/main/resources/static/css/partner/partnerStepOne.css
@@ -1,24 +1,132 @@
 .header {
 	position: relative;
 	width: 100%;
-	height: 200px;
+	height: 100px;
+	background: #FAFAFA;
+	font-size: 0.8em;
 }
 
 .content {
 	position: relative;
+	margin: 20px;
 	width: 100%;
 	height: 200px;
 }
 
 .footer {
 	position: relative;
+	top: 120px;
+	margin: 20px;
 	width: 100%;
 	height: 200px;
 }
 
 #stepOne {
+	position: relative;
+	display: inline-block;
+	margin-top: 20px;
+	margin-left: 20px;
 	height: 50px;
 	width: 50px;
 	border: 1px solid #ccc;
-	border-radius: 15px;
+	border-radius: 20px;
+}
+
+#stepOne-text {
+	position: relative;
+	left: 10px;
+	top: 5px;
+}
+
+#stepTwo {
+	position: relative;
+	display: inline-block;
+	margin-left: 20px;
+	height: 50px;
+	width: 50px;
+	border: 1px solid #ccc;
+	border-radius: 20px;
+}
+
+#stepTwo-text {
+	position: relative;
+	left: 10px;
+	top: 5px;
+}
+
+#stepThree {
+	position: relative;
+	display: inline-block;
+	margin-left: 20px;
+	height: 50px;
+	width: 50px;
+	border: 1px solid #ccc;
+	border-radius: 20px;
+}
+
+#stepThree-text {
+	position: relative;
+	left: 10px;
+	top: 5px;
+}
+
+#stepFour {
+	position: relative;
+	display: inline-block;
+	margin-left: 20px;
+	height: 50px;
+	width: 50px;
+	border: 1px solid #ccc;
+	border-radius: 20px;
+}
+
+#stepFour-text {
+	position: relative;
+	left: 10px;
+	top: 5px;
+}
+
+#irsNo {
+	position: absolute;
+	left: 130px;
+}
+
+#partnerNm {
+	position: absolute;
+	left: 130px;
+}
+
+#ceoNm {
+	position: absolute;
+	left: 130px;
+}
+
+#telNo {
+	position: absolute;
+	left: 130px;
+}
+
+#address {
+	position: absolute;
+	left: 130px;
+}
+
+#applicantNm {
+	position: absolute;
+	left: 130px;
+}
+
+#applicantTelNo {
+	position: absolute;
+	left: 130px;
+}
+
+.input-title-box {
+	width: 200px;	
+}
+
+#applicantType {
+	display: inline-block;
+	position: absolute;
+	left: 130px;
 }
