--- a/src/main/resources/templates/partner/partnerMain.html
+++ b/src/main/resources/templates/partner/partnerMain.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href="/lib/bootstrap-4.1.3-dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/partner/partnerMain.css">
 <title>Insert title here</title>
 </head>
 <body>
-	<div class="header">
-		공인중개사 무료등록
+	<div class="partnerMain-header">
+		<a class="partnerMain-header-text">공인중개사 무료등록</a>
 	</div>
-	<div class="content">
+	<div class="partnerMain-content">
 		<button id="apply" type="button" class="btn btn-success">신청하기</button>
 	</div>
-	<div class="description">
+	<div class="partnerMain-description">
 		추가설명
 	</div>
 </body>
-<script src="/lib/jquery/jquery.min.js"></script>
-<script src="/lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
 <script src="/js/partner/partnerMain.js"></script>
 
 </html>
