딜 화면부 완료.

--- a/src/main/resources/templates/cm/cmIndex.html
+++ b/src/main/resources/templates/cm/cmIndex.html
@@ -22,6 +22,7 @@
 </body>
 
 <script src="../comn/jquery-3.3.1.js"></script>
+<script src="../comn/jquery.number.min.js"></script>
 <script src="../comn/popper.min.js"></script>
 <script src="../comn/bootstrap.min.js"></script>
 <link  href="../comn/bootstrap.min.css" rel="stylesheet">
