--- a/src/main/resources/templates/dl/dlMain.html
+++ b/src/main/resources/templates/dl/dlMain.html
@@ -8,6 +8,7 @@
 
 <div class="container">
 
+		
 	<ul class="nav nav-tabs justify-content-center">
 	  <li class="nav-item"><a id="tabDealStep1" class="nav-link active" href="#" data-step="1">구분</a></li>
 	  <li class="nav-item"><a id="tabDealStep2" class="nav-link" href="#" data-step="2">방식</a></li>
@@ -26,11 +27,8 @@
 	  
 	</div>
 	
-	<div>
-	문제
-	</div>
 
-<input id="txtDlBeCode1" type="text" th:value='${dlValStep1}'>
+	<input id="txtDlBeCode1" type="text" th:value="${dlValStep1}" class="sr-only">
 
 </div>
 <script src="../js/dl/dlMain.js"></script>
