--- a/src/main/resources/templates/partner/partnerStepOne.html
+++ b/src/main/resources/templates/partner/partnerStepOne.html
@@ -18,11 +18,11 @@
 	<div class="content">
 		<div><a>사업자번호</a><input id="irsNo" type="text" value=''></div>
 		<p>
-		<div><a>업체명</a><input id="partnerNm" type="text" value=''></div>
+		<div><a>업체명</a><input id="vendorName" type="text" value=''></div>
 		<p>
-		<div><a>대표명</a><input id="ceoNm" type="text" value=''></div>
+		<div><a>대표명</a><input id="ceoName" type="text" value=''></div>
 		<p>
-		<div><a>연락처</a><input id="telNo" type="text" value=''></div>
+		<div><a>연락처</a><input id="telNo1" type="text" value=''></div>
 		<p>
 		<div><a>사무실 주소</a><input id="address" type="text" value=''></div>
 		<p>
@@ -39,7 +39,7 @@
 			</div>
 		</div>
 		<p>
-		<div><a>신청자명</a><input id="applicantNm" type="text" value=''></div>
+		<div><a>신청자명</a><input id="applicantName" type="text" value=''></div>
 		<p>
 		<div><a>신청자 전화번호</a><input id="applicantTelNo" type="text" value=''></div>
 	</div>
