--- a/src/main/resources/static/css/partner/partnerStepOne.css
+++ b/src/main/resources/static/css/partner/partnerStepOne.css
@@ -28,13 +28,13 @@
 	margin-left: 20px;
 	height: 50px;
 	width: 50px;
-	border: 1px solid #ccc;
-	border-radius: 20px;
+	background: #6799FF;
+	color: #FFFFFF;
 }
 
 #stepOne-text {
 	position: relative;
-	left: 10px;
+	left: 12px;
 	top: 5px;
 }
 
@@ -44,13 +44,13 @@
 	margin-left: 20px;
 	height: 50px;
 	width: 50px;
-	border: 1px solid #ccc;
-	border-radius: 20px;
+	background: #5CD1E5;
+	color: #FFFFFF;
 }
 
 #stepTwo-text {
 	position: relative;
-	left: 10px;
+	left: 12px;
 	top: 5px;
 }
 
@@ -60,13 +60,13 @@
 	margin-left: 20px;
 	height: 50px;
 	width: 50px;
-	border: 1px solid #ccc;
-	border-radius: 20px;
+	background: #5CD1E5;
+	color: #FFFFFF;
 }
 
 #stepThree-text {
 	position: relative;
-	left: 10px;
+	left: 12px;
 	top: 5px;
 }
 
@@ -76,13 +76,13 @@
 	margin-left: 20px;
 	height: 50px;
 	width: 50px;
-	border: 1px solid #ccc;
-	border-radius: 20px;
+	background: #5CD1E5;
+	color: #FFFFFF;
 }
 
 #stepFour-text {
 	position: relative;
-	left: 10px;
+	left: 12px;
 	top: 5px;
 }
 
