--- a/src/main/resources/static/css/partner/partnerStepOne.css
+++ b/src/main/resources/static/css/partner/partnerStepOne.css
@@ -1,24 +1,18 @@
 .header {
 	position: relative;
 	width: 100%;
-	height: 100px;
 	background: #FAFAFA;
 	font-size: 0.8em;
 }
 
 .content {
 	position: relative;
-	margin: 20px;
-	width: 100%;
-	height: 200px;
+	width: 100%;	
 }
 
 .footer {
-	position: relative;
-	top: 120px;
-	margin: 20px;
+	position: relative;	
 	width: 100%;
-	height: 200px;
 }
 
 #stepOne {
@@ -87,38 +81,31 @@
 }
 
 #irsNo {
-	position: absolute;
-	left: 130px;
+	position: relative;
 }
 
-#partnerNm {
-	position: absolute;
-	left: 130px;
+#vendorName {
+	position: relative;
 }
 
-#ceoNm {
-	position: absolute;
-	left: 130px;
+#ceoName {
+	position: relative;
 }
 
-#telNo {
-	position: absolute;
-	left: 130px;
+#telNo1 {
+	position: relative;
 }
 
 #address {
-	position: absolute;
-	left: 130px;
+	position: relative;
 }
 
-#applicantNm {
-	position: absolute;
-	left: 130px;
+#applicantName {
+	position: relative;
 }
 
 #applicantTelNo {
-	position: absolute;
-	left: 130px;
+	position: relative;
 }
 
 .input-title-box {
@@ -126,7 +113,5 @@
 }
 
 #applicantType {
-	display: inline-block;
-	position: absolute;
-	left: 130px;
+	position: relative;
 }
