--- a/src/main/resources/templates/partner/partnerStepOne.html
+++ b/src/main/resources/templates/partner/partnerStepOne.html
@@ -15,37 +15,54 @@
 		<div id="stepThree"><a id="stepThree-text">신청<br>등록</a></div>
 		<div id="stepFour"><a id="stepFour-text">등록<br>완료</a></div>
 	</div>
-	<div class="content">
-		<div><a>사업자번호</a><input id="irsNo" type="text" value=''></div>
-		<p>
-		<div><a>업체명</a><input id="vendorName" type="text" value=''></div>
-		<p>
-		<div><a>대표명</a><input id="ceoName" type="text" value=''></div>
-		<p>
-		<div><a>연락처</a><input id="telNo1" type="text" value=''></div>
-		<p>
-		<div><a>사무실 주소</a><input id="address" type="text" value=''></div>
-		<p>
-		<div><a>신청자</a>
-			<div id="applicantType">
+	<p>
+	<div style="text-align:center;"><a>사업자번호</a></div>
+	<p>
+	<div><input style="display:block; margin: auto; width: 60%;" id="irsNo" type="text" value=''></div>
+	<p>
+	<div style="text-align:center;"><a>업체명</a></div>
+	<p>
+	<div><input style="display:block; margin: auto; width: 60%;" id="vendorName" type="text" value=''></div>
+	<p>
+	<div style="text-align:center;"><a>대표명</a></div>
+	<p>
+	<div><input style="display:block; margin: auto; width: 60%;" id="ceoName" type="text" value=''></div>
+	<p>
+	<div style="text-align:center;"><a>연락처</a><p></div>
+	<p>
+	<div><input style="display:block; margin: auto; width: 60%;" id="telNo1" type="text" value=''></div>
+	<p>
+	<div style="text-align:center;"><a>사무실 주소</a></div>
+	<p>
+	<div><input style="display:block; margin: auto; width: 60%;" id="address" type="text" value=''></div>
+	<p>
+	<div style="text-align:center;"><a>신청자</a></div>
+	<p>
+	<div id="applicantType">
+		<div style="margin: auto; width:54%;">
 			<div class="form-check form-check-inline">
-  				<input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-  				<label class="form-check-label" for="inlineRadio1">대표본인</label>
+				<input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+				<label class="form-check-label" for="inlineRadio1">대표본인</label>
 			</div>
 			<div class="form-check form-check-inline">
-  				<input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-  				<label class="form-check-label" for="inlineRadio2">사무원</label>
-			</div>
+				<input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+				<label class="form-check-label" for="inlineRadio2">사무원</label>
 			</div>
 		</div>
-		<p>
-		<div><a>신청자명</a><input id="applicantName" type="text" value=''></div>
-		<p>
-		<div><a>신청자 전화번호</a><input id="applicantTelNo" type="text" value=''></div>
 	</div>
-	<div class="footer">
-		<button id="register" type="button" class="btn btn-success">등록하기</button>
-	</div>
+	<p>
+	<div style="text-align:center;"><a>신청자명</a></div>
+	<p>
+	<div><input style="display:block; margin: auto; width: 60%;" id="applicantName" type="text" value=''></div>
+	<p>
+	<div style="text-align:center;"><a>신청자 전화번호</a></div>
+	<p>
+	<div><input style="display:block; margin: auto; width: 60%;" id="applicantTelNo" type="text" value=''></div>
+	<p>
+	<p>
+	<div><button style="display:block; margin: auto; width: 60%;" id="register" type="button" class="btn btn-success">등록하기</button></div>
+	<p>
+	<p>
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
