--- a/src/main/resources/templates/partner/partnerStepOne.html
+++ b/src/main/resources/templates/partner/partnerStepOne.html
@@ -18,23 +18,23 @@
 	<p>
 	<div style="text-align:center;"><a>사업자번호</a></div>
 	<p>
-	<div><input style="display:block; margin: auto; width: 60%;" id="irsNo" type="text" value=''></div>
+	<div><input class="partner-input" id="irsNo" type="text" value=''></div>
 	<p>
 	<div style="text-align:center;"><a>업체명</a></div>
 	<p>
-	<div><input style="display:block; margin: auto; width: 60%;" id="vendorName" type="text" value=''></div>
+	<div><input class="partner-input" id="vendorName" type="text" value=''></div>
 	<p>
 	<div style="text-align:center;"><a>대표명</a></div>
 	<p>
-	<div><input style="display:block; margin: auto; width: 60%;" id="ceoName" type="text" value=''></div>
+	<div><input class="partner-input" id="ceoName" type="text" value=''></div>
 	<p>
 	<div style="text-align:center;"><a>연락처</a><p></div>
 	<p>
-	<div><input style="display:block; margin: auto; width: 60%;" id="telNo1" type="text" value=''></div>
+	<div><input class="partner-input" id="telNo1" type="text" value=''></div>
 	<p>
 	<div style="text-align:center;"><a>사무실 주소</a></div>
 	<p>
-	<div><input style="display:block; margin: auto; width: 60%;" id="address" type="text" value=''></div>
+	<div><input class="partner-input" id="address" type="text" value=''></div>
 	<p>
 	<div style="text-align:center;"><a>신청자</a></div>
 	<p>
@@ -53,11 +53,11 @@
 	<p>
 	<div style="text-align:center;"><a>신청자명</a></div>
 	<p>
-	<div><input style="display:block; margin: auto; width: 60%;" id="applicantName" type="text" value=''></div>
+	<div><input class="partner-input" id="applicantName" type="text" value=''></div>
 	<p>
 	<div style="text-align:center;"><a>신청자 전화번호</a></div>
 	<p>
-	<div><input style="display:block; margin: auto; width: 60%;" id="applicantTelNo" type="text" value=''></div>
+	<div><input class="partner-input" id="applicantTelNo" type="text" value=''></div>
 	<p>
 	<p>
 	<div><button style="display:block; margin: auto; width: 60%;" id="register" type="button" class="btn btn-success">등록하기</button></div>
