--- a/src/main/resources/templates/partner/partnerStepOne.html
+++ b/src/main/resources/templates/partner/partnerStepOne.html
@@ -16,27 +16,15 @@
 		<div id="stepFour"><a id="stepFour-text">등록<br>완료</a></div>
 	</div>
 	<p>
-	<div style="text-align:center;"><a>사업자번호</a></div>
+	<div><input class="form-control mr-sm-2" placeholder="사업자번호" id="irsNo" type="text" value=''></div>
 	<p>
-	<div><input class="partner-input" id="irsNo" type="text" value=''></div>
+	<div><input class="form-control mr-sm-2" placeholder="업체명" id="vendorName" type="text" value=''></div>
 	<p>
-	<div style="text-align:center;"><a>업체명</a></div>
+	<div><input class="form-control mr-sm-2" placeholder="대표명" id="ceoName" type="text" value=''></div>
 	<p>
-	<div><input class="partner-input" id="vendorName" type="text" value=''></div>
+	<div><input class="form-control mr-sm-2" placeholder="연락처" id="telNo1" type="text" value=''></div>
 	<p>
-	<div style="text-align:center;"><a>대표명</a></div>
-	<p>
-	<div><input class="partner-input" id="ceoName" type="text" value=''></div>
-	<p>
-	<div style="text-align:center;"><a>연락처</a><p></div>
-	<p>
-	<div><input class="partner-input" id="telNo1" type="text" value=''></div>
-	<p>
-	<div style="text-align:center;"><a>사무실 주소</a></div>
-	<p>
-	<div><input class="partner-input" id="address" type="text" value=''></div>
-	<p>
-	<div style="text-align:center;"><a>신청자</a></div>
+	<div><input class="form-control mr-sm-2" placeholder="사무실 주소" id="address" type="text" value=''></div>
 	<p>
 	<div id="applicantType">
 		<div style="margin: auto; width:54%;">
@@ -51,13 +39,9 @@
 		</div>
 	</div>
 	<p>
-	<div style="text-align:center;"><a>신청자명</a></div>
+	<div><input class="form-control mr-sm-2" placeholder="신청자명" id="applicantName" type="text" value=''></div>
 	<p>
-	<div><input class="partner-input" id="applicantName" type="text" value=''></div>
-	<p>
-	<div style="text-align:center;"><a>신청자 전화번호</a></div>
-	<p>
-	<div><input class="partner-input" id="applicantTelNo" type="text" value=''></div>
+	<div><input class="form-control mr-sm-2" placeholder="신청자 전화번호" id="applicantTelNo" type="text" value=''></div>
 	<p>
 	<p>
 	<div><button style="display:block; margin: auto; width: 60%;" id="register" type="button" class="btn btn-success">등록하기</button></div>
