폰트어썸적용 mustache적용

--- a/src/main/resources/templates/cm/cmIndex.html
+++ b/src/main/resources/templates/cm/cmIndex.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<div class="container">
+<div>
 	<button class="btn btn-default sr-only" data-target="#div300" data-toggle="modal" id="btnLocInputer"></button>
 	<div id="div100"></div>
 	<div id="div200"></div>
@@ -16,16 +16,21 @@
 		<div class="modal-dialog">
 		</div>
 	</div>
-
-
 </div>
 </body>
-
+<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
 <script src="../comn/jquery-3.3.1.js"></script>
 <script src="../comn/jquery.number.min.js"></script>
+<script src="../comn/mustache.min.js"></script>
 <script src="../comn/popper.min.js"></script>
 <script src="../comn/bootstrap.min.js"></script>
-<link  href="../comn/bootstrap.min.css" rel="stylesheet">
+<link href="../comn/bootstrap.min.css" rel="stylesheet">
+
+<link href="../fapro/css/all.min.css" rel="stylesheet">
+
+
+<link href="../comn/probe.css" rel="stylesheet">
+
 
 <script src="../js/cm/cmIndex.js"></script>
 <script src="../js/util/globalUtil.js"></script>
