--- a/src/main/resources/templates/cm/cmMain.html
+++ b/src/main/resources/templates/cm/cmMain.html
@@ -3,5 +3,6 @@
 <div name="div110" id="div110"></div>
 <div name="div120" id="div120"></div>
 <div name="div130" id="div130"></div>
+<div name="div140" id="div140"></div>
 </div>
 <script src="../js/cm/cmMain.js"></script>
