--- a/src/main/resources/templates/cm/cmNav.html
+++ b/src/main/resources/templates/cm/cmNav.html
@@ -2,23 +2,18 @@
 <meta charset="UTF-8">
 <script src="../js/cm/cmNav.js"></script>
   
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="#">Probe</a>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-		<li class="nav-item"><a class="nav-link active" href="#" id="cmHome">홈</a></li>
-		<li class="nav-item"><a class="nav-link" href="#" id="dlMain_9">집구하기</a></li>
-		<li class="nav-item"><a class="nav-link" href="#" id="dlMain_8">집내놓기</a></li>
-		<li class="nav-item"><a class="nav-link" href="#">Community</a></li>
-		<li class="nav-item"><a class="nav-link" href="#">Locations</a></li>
-		<li class="nav-item"><a class="nav-link" href="#" id="ptIncome">공인중개사 무료 등록</a></li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-	</nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navToggler" aria-controls="navToggler" aria-expanded="false" aria-label="Toggle navigation">
+		<i class="fas fa-bars"></i>
+	</button>
+	<a class="navbar-brand" href="#">프로브</a>
+	<div class="collapse navbar-collapse" id="navToggler">
+		<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+			<li class="nav-item"><a class="nav-link" href="#" id="cmHome"><i class="fal fa-home"></i> 프로브 홈</a></li>
+			<li class="nav-item"><a class="nav-link" href="#" id="dlMain_9"><i class="fal fa-search-location"></i> 집 구하기</a></li>
+			<li class="nav-item"><a class="nav-link" href="#" id="dlMain_8"><i class="fal fa-megaphone"></i> 집 내놓기</a></li>
+			<li class="nav-item"><a class="nav-link" href="#"><i class="fal fa-file-alt"></i> 사용 방법</a></li>
+			<li class="nav-item"><a class="nav-link" href="#" id="ptIncome"><i class="fal fa-building"></i> 공인중개사 무료 등록</a></li>
+		</ul>
+	</div>
+</nav>
