--- a/src/main/resources/templates/cm/cmWelcome.html
+++ b/src/main/resources/templates/cm/cmWelcome.html
@@ -1,41 +1,38 @@
 <meta charset="UTF-8">
+<script src="/js/cm/cmWelcome.js"></script>
+<link rel="stylesheet" href="/css/cm/cmWelcome.css">
+
 
 <div class="jumbotron">
-  <h1 class="display-4">Hello, There!</h1>
-  <p class="lead">할인이 서비스다.</p>
-  <hr class="my-4">
-  <p>허위 매물 없다.</p>
-  <p>매물도 없다.</p>
-  <p>중개수수료 할인해주는 공인중개사만 있다.</p>
-  <a class="btn btn-primary btn-lg" href="#" role="button" id="cmCusGet" name="cmCusGet">집 구하기</a>
-  <a class="btn btn-primary btn-lg" href="#" role="button" id="cmCusSet" name="cmCusSet">집 내놓기</a>
-</div>
-
-<div class="alert alert-primary" role="alert">
-  신문기사 primary alert
-</div>
-<div class="alert alert-secondary" role="alert">
-  신문기사 secondary alert
-</div>
-<div class="alert alert-success" role="alert">
-  신문기사 success alert
-</div>
-<div class="alert alert-danger" role="alert">
-  신문기사 danger alert
-</div>
-<div class="alert alert-warning" role="alert">
-  신문기사 warning alert
-</div>
-<div class="alert alert-info" role="alert">
-  신문기사 info alert
-</div>
-<div class="alert alert-light" role="alert">
-  신문기사 light alert
-</div>
-<div class="alert alert-dark" role="alert">
-  신문기사 dark alert
+<br><br>
+	<div class="container">
+		<p class="text-center">구할 때도, 내놓을 때도</p>
+		<h2 class="text-center">수수료 할인해주는</h2>
+		<p class="text-center">공인중개사님을 찾아보세요.</p>
+  	</div>
+<br><br>
+	<div class="container text-center">
+		<a class="btn btn-success btn-lg" href="#" role="button" id="cmCusGet" name="cmCusGet">집 구하기</a>
+		<a class="btn btn-success btn-lg" href="#" role="button" id="cmCusSet" name="cmCusSet">집 내놓기</a>
+	</div>
 </div>
 
 
+<div class="container text-center">
+	<h1><i class="fal fa-hand-holding-usd"></i></h1>
+	<h3>중개수수료, 아껴볼까요?</h3>
+	<p>부담스러운 부동산 중개수수료<br>프로브에서 최소 10% 이상 절약하세요.</p>
+</div>
+<br><br>
+<div class="container text-center">
+	<h1><i class="fal fa-search-location"></i></h1>
+	<h3>원하는 집을 찾으셨나요?</h3>
+	<p>인터넷으로 발품팔아 원하는 집을 찾으셨나요?<br>이제 수수료를 할인해주는 공인중개사님을 찾아보세요.</p>
+</div>
+<br><br>
+<div class="container text-center">
+	<h1><i class="fal fa-handshake"></i></h1>
+	<h3>중개사님을 찾아드려요.</h3>
+	<p>저렴한 수수료의 공인중개사님을 찾아드려요.<br>중개수수료 10%~50% 할인!<br>수수료가 최소 10% 이상 절약됩니다.</p>
+</div>
 
-<script src="../js/cm/cmWelcome.js"></script>
