--- a/src/main/resources/templates/partner/partnerMain.html
+++ b/src/main/resources/templates/partner/partnerMain.html
@@ -6,14 +6,23 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<div class="partnerMain-header">
-		<a class="partnerMain-header-text">공인중개사 무료등록</a>
+	<br>
+	<div class="container text-center">
+		<h3>공인중개사 무료등록</h3>
 	</div>
-	<div class="partnerMain-content">
+	<br>
+	<div class="title-divider"></div>
+	<br><br>		
+	<div class="container text-center">
+		<h1><i class="fal fa-file-signature"></i></h1>
+		<h3>무료등록을 신청하세요</h3>
+		<a>등록이 승인되면 사용자들에게 중개 수수료 정보가 공개됩니다</a>
+	</div>
+	<br>
+	<div class="title-divider"></div>
+	<br><br>
+	<div class="container text-center">
 		<button id="apply" type="button" class="btn btn-success">신청하기</button>
-	</div>
-	<div class="partnerMain-description">
-		추가설명
 	</div>
 </body>
 <script src="/js/partner/partnerMain.js"></script>
