--- a/src/main/resources/static/css/partner/partnerStepOne.css
+++ b/src/main/resources/static/css/partner/partnerStepOne.css
@@ -1,125 +1,94 @@
-.header {
-	position: relative;
-	font-size: 0.8em;
-	margin: auto;
-    width: 280px;
-}
-
-.content {
-	position: relative;
-	width: 100%;	
-}
-
-.footer {
-	position: relative;	
-	width: 100%;
+.steps {
+	
 }
 
 #stepOne {
 	position: relative;
 	display: inline-block;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	height: 50px;
-	width: 50px;
-	background: #6799FF;
-	color: #FFFFFF;
-}
-
-#stepOne-text {
-	position: relative;
-	left: 12px;
-	top: 5px;
+	height: 20%;
+	width: 23.5%;
+	border-left: 1px solid #ccc;
+	border-right: 1px solid #ccc;
+	font-size: 14px;
 }
 
 #stepTwo {
 	position: relative;
 	display: inline-block;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	margin-left: 20px;
-	height: 50px;
-	width: 50px;
-	background: #5CD1E5;
-	color: #FFFFFF;
-}
-
-#stepTwo-text {
-	position: relative;
-	left: 12px;
-	top: 5px;
+	height: 20%;
+	width: 23.5%;
+	border-right: 1px solid #ccc;
+	font-size: 14px;
 }
 
 #stepThree {
 	position: relative;
 	display: inline-block;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	margin-left: 20px;
-	height: 50px;
-	width: 50px;
-	background: #5CD1E5;
-	color: #FFFFFF;
-}
-
-#stepThree-text {
-	position: relative;
-	left: 12px;
-	top: 5px;
+	height: 20%;
+	width: 23.5%;
+	border-right: 1px solid #ccc;
+	font-size: 14px;
 }
 
 #stepFour {
 	position: relative;
 	display: inline-block;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	margin-left: 20px;
-	height: 50px;
-	width: 50px;
-	background: #5CD1E5;
-	color: #FFFFFF;
-}
-
-#stepFour-text {
-	position: relative;
-	left: 12px;
-	top: 5px;
+	height: 20%;
+	width: 23.5%;
+	border-right: 1px solid #ccc;
+	font-size: 14px;
 }
 
 #irsNo {
 	position: relative;
+	width: 80%;
+	margin: auto;
 }
 
 #vendorName {
 	position: relative;
+	width: 80%;
+	margin: auto;
 }
 
 #ceoName {
 	position: relative;
+	width: 80%;
+	margin: auto;
 }
 
 #telNo1 {
 	position: relative;
+	width: 80%;
+	margin: auto;
 }
 
 #address {
 	position: relative;
+	width: 80%;
+	margin: auto;
 }
 
 #applicantName {
 	position: relative;
+	width: 80%;
+	margin: auto;
 }
 
 #applicantTelNo {
 	position: relative;
+	width: 80%;
+	margin: auto;
 }
 
 .input-title-box {
-	width: 200px;	
+	width: 200px;
 }
 
 #applicantType {
 	position: relative;
+	width: 80%;
+	margin: auto;
 }
 
 .partner-input {
@@ -128,6 +97,12 @@
 	width: 70%;
 	height: 35px;
 	margin-bottom: 20px;
-\	broder: 1px solid #ccc;
+	broder: 1px solid #ccc;
 	outline: none;
+}
+
+.title-divider {
+	border-bottom: 1px solid #ccc;
+	width: 80%;
+	margin: auto;
 }
