--- a/src/main/resources/templates/partner/partnerStepOne.html
+++ b/src/main/resources/templates/partner/partnerStepOne.html
@@ -9,25 +9,28 @@
 </head>
 
 <body>
-	<div class="header">
-		<div id="stepOne"><a id="stepOne-text">정보<br>입력</a></div>
-		<div id="stepTwo"><a id="stepTwo-text">본인<br>인증</a></div>
-		<div id="stepThree"><a id="stepThree-text">신청<br>등록</a></div>
-		<div id="stepFour"><a id="stepFour-text">등록<br>완료</a></div>
-	</div>
-	<p>
-	<div><input class="form-control mr-sm-2" placeholder="사업자번호" id="irsNo" type="text" value=''></div>
-	<p>
-	<div><input class="form-control mr-sm-2" placeholder="업체명" id="vendorName" type="text" value=''></div>
-	<p>
-	<div><input class="form-control mr-sm-2" placeholder="대표명" id="ceoName" type="text" value=''></div>
-	<p>
-	<div><input class="form-control mr-sm-2" placeholder="연락처" id="telNo1" type="text" value=''></div>
-	<p>
-	<div><input class="form-control mr-sm-2" placeholder="사무실 주소" id="address" type="text" value=''></div>
-	<p>
-	<div id="applicantType">
-		<div style="margin: auto; width:54%;">
+	<br>
+	<div id="steps" class="container text-center">
+		<div id="stepOne"><i class="far fa-pencil"></i>&nbsp;<a id="stepOne-text">정보입력</a></div>
+		<div id="stepTwo"><i class="fal fa-user"></i>&nbsp;<a id="stepTwo-text">본인인증</a></div>
+		<div id="stepThree"><i class="fal fa-address-card"></i>&nbsp;<a id="stepThree-text">신청등록</a></div>
+		<div id="stepFour"><i class="fas fa-check-circle"></i>&nbsp;<a id="stepFour-text">등록완료</a></div>
+	</div>	
+	<br>
+	<div class="title-divider"></div>
+	<br>
+	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="사업자번호" id="irsNo" type="text" value=''></div>
+	<br>
+	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="업체명" id="vendorName" type="text" value=''></div>
+	<br>
+	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="대표명" id="ceoName" type="text" value=''></div>
+	<br>
+	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="연락처" id="telNo1" type="text" value=''></div>
+	<br>
+	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="사무실 주소" id="address" type="text" value=''></div>
+	<br>
+	<div id="applicantType" class="container text-center">
+		<div style="margin: auto; width:80%;">
 			<div class="form-check form-check-inline">
 				<input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
 				<label class="form-check-label" for="inlineRadio1">대표본인</label>
@@ -38,15 +41,14 @@
 			</div>
 		</div>
 	</div>
-	<p>
-	<div><input class="form-control mr-sm-2" placeholder="신청자명" id="applicantName" type="text" value=''></div>
-	<p>
-	<div><input class="form-control mr-sm-2" placeholder="신청자 전화번호" id="applicantTelNo" type="text" value=''></div>
-	<p>
-	<p>
-	<div><button style="display:block; margin: auto; width: 60%;" id="register" type="button" class="btn btn-success">등록하기</button></div>
-	<p>
-	<p>
+	<br>
+	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="신청자명" id="applicantName" type="text" value=''></div>
+	<br>
+	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="신청자 전화번호" id="applicantTelNo" type="text" value=''></div>
+	<br>
+	<div class="title-divider"></div>
+	<br>
+	<div><button style="display:block; margin: auto; width: 80%;" id="register" type="button" class="btn btn-success">등록하기</button></div>
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
