--- a/src/main/resources/static/css/partner/partnerStepOne.css
+++ b/src/main/resources/static/css/partner/partnerStepOne.css
@@ -39,6 +39,12 @@
 	font-size: 14px;
 }
 
+#id {
+	position: relative;
+	width: 80%;
+	margin: auto;
+}
+
 #irsNo {
 	position: relative;
 	width: 80%;
