--- a/src/main/resources/templates/partner/partnerStepOne.html
+++ b/src/main/resources/templates/partner/partnerStepOne.html
@@ -19,13 +19,15 @@
 	<br>
 	<div class="title-divider"></div>
 	<br>
-	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="사업자번호" id="irsNo" type="text" value=''></div>
+	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="아이디" id="id" type="text" value=''></div>
+	<br>
+	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="사업자번호" id="irsNo" type="number" value=''></div>
 	<br>
 	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="업체명" id="vendorName" type="text" value=''></div>
 	<br>
 	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="대표명" id="ceoName" type="text" value=''></div>
 	<br>
-	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="연락처" id="telNo1" type="text" value=''></div>
+	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="연락처" id="telNo1" type="number" value=''></div>
 	<br>
 	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="사무실 주소" id="address" type="text" value=''></div>
 	<br>
@@ -44,11 +46,11 @@
 	<br>
 	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="신청자명" id="applicantName" type="text" value=''></div>
 	<br>
-	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="신청자 전화번호" id="applicantTelNo" type="text" value=''></div>
+	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="신청자 전화번호" id="applicantTelNo" type="number" value=''></div>
 	<br>
 	<div class="title-divider"></div>
 	<br>
-	<div><button style="display:block; margin: auto; width: 80%;" id="register" type="button" class="btn btn-success">등록하기</button></div>
+	<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success">다음</button></div>
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
