--- a/src/main/resources/templates/partner/partnerStepOne.html
+++ b/src/main/resources/templates/partner/partnerStepOne.html
@@ -19,6 +19,19 @@
 	<br>
 	<div class="title-divider"></div>
 	<br>
+	<div id="applicantType" class="container text-center">
+		<div style="margin: auto; width:80%;">
+			<div class="btn-group btn-group-toggle" data-toggle="buttons">
+				<label class="btn btn-secondary active">
+					<input type="radio" name="options" id="option1" autocomplete="off" checked>대표본인
+				</label>
+				<label class="btn btn-secondary">
+					<input type="radio" name="options" id="option2" autocomplete="off">사무원
+				</label>
+			</div>
+		</div>
+	</div>
+	<br>
 	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="아이디" id="id" type="text" value=''></div>
 	<br>
 	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="사업자번호" id="irsNo" type="number" value=''></div>
@@ -30,19 +43,6 @@
 	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="연락처" id="telNo1" type="number" value=''></div>
 	<br>
 	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="사무실 주소" id="address" type="text" value=''></div>
-	<br>
-	<div id="applicantType" class="container text-center">
-		<div style="margin: auto; width:80%;">
-			<div class="form-check form-check-inline">
-				<input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-				<label class="form-check-label" for="inlineRadio1">대표본인</label>
-			</div>
-			<div class="form-check form-check-inline">
-				<input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-				<label class="form-check-label" for="inlineRadio2">사무원</label>
-			</div>
-		</div>
-	</div>
 	<br>
 	<div class="container text-center"><input class="form-control mr-sm-2" placeholder="신청자명" id="applicantName" type="text" value=''></div>
 	<br>
