--- a/src/main/resources/templates/partner/partnerStepThree.html
+++ b/src/main/resources/templates/partner/partnerStepThree.html
@@ -4,24 +4,21 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="/lib/bootstrap-4.1.3-dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/css/partner/partnerStepTwo.css">
+<link rel="stylesheet" href="/css/partner/partnerStepThree.css">
 <title>Insert title here</title>
 </head>
 
 <body>
 	<br>
 	<div class="container text-center">
-		<h3>인증방법을 선택하세요</h3>
-		<br>
-		<div id="authMethod" class="container text-center">
-			<div><button style="display:block; margin: auto; width: 80%;" id="phoneAuth" type="button" class="btn btn-primary">휴대폰</button></div>
-		</div>
+		<h3>활동지역을 선택하세요</h3>
+		
 	</div>
 	<br>
 	<div><button style="display:block; margin: auto; width: 80%;" id="register" type="button" class="btn btn-success">다음</button></div>
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
-<script src="/js/partner/partnerStepTwo.js"></script>
+<script src="/js/partner/partnerStepThree.js"></script>
 
 </html>
