--- a/src/main/resources/templates/partner/partnerStepThree.html
+++ b/src/main/resources/templates/partner/partnerStepThree.html
@@ -10,6 +10,13 @@
 
 <body>
 	<br>
+	<div id="steps" class="container text-center">
+		<div id="stepOne"><i class="far fa-pencil"></i>&nbsp;<a id="stepOne-text">정보입력</a></div>
+		<div id="stepTwo"><i class="fal fa-user"></i>&nbsp;<a id="stepTwo-text">본인인증</a></div>
+		<div id="stepThree"><i class="fal fa-address-card"></i>&nbsp;<a id="stepThree-text">신청등록</a></div>
+		<div id="stepFour"><i class="fas fa-check-circle"></i>&nbsp;<a id="stepFour-text">등록완료</a></div>
+	</div>	
+	<br>
 	<div class="container text-center">
 		<h3>활동지역을 선택하세요</h3>
 		
