--- a/src/main/resources/templates/partner/partnerStepTwo.html
+++ b/src/main/resources/templates/partner/partnerStepTwo.html
@@ -10,6 +10,13 @@
 
 <body>
 	<br>
+	<div id="steps" class="container text-center">
+		<div id="stepOne"><i class="far fa-pencil"></i>&nbsp;<a id="stepOne-text">정보입력</a></div>
+		<div id="stepTwo"><i class="fal fa-user"></i>&nbsp;<a id="stepTwo-text">본인인증</a></div>
+		<div id="stepThree"><i class="fal fa-address-card"></i>&nbsp;<a id="stepThree-text">신청등록</a></div>
+		<div id="stepFour"><i class="fas fa-check-circle"></i>&nbsp;<a id="stepFour-text">등록완료</a></div>
+	</div>	
+	<br>
 	<div class="container text-center">
 		<h3>인증방법을 선택하세요</h3>
 		<br>
@@ -18,7 +25,7 @@
 		</div>
 	</div>
 	<br>
-	<div><button style="display:block; margin: auto; width: 80%;" id="register" type="button" class="btn btn-success">다음</button></div>
+	<div><button style="display:block; margin: auto; width: 80%;" id="goNext" type="button" class="btn btn-success">다음</button></div>
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
